--- a/_sass/_common/scaffolding/tables.scss
+++ b/_sass/_common/scaffolding/tables.scss
@@ -18,6 +18,7 @@ caption, th, td {
   text-align: $table-content-alignment;
   vertical-align: $table-content-vertical;
   font-weight: normal;
+  background-color: #002451; 
 }
 
 th, td {
